[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Mini Games/Hack/HackGameManager.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Inconsolata/static/Inconsolata-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Inconsolata/static/Inconsolata-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1, 550, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 262.0
initial_velocity_random = 0.31
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 0.35
color = Color( 0, 1, 0, 0.352941 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 110 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 540 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
margin_left = -2.18152
margin_top = 0.872559
margin_right = 1917.82
margin_bottom = 1080.87
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -8, 568 )
amount = 180
lifetime = 8.0
process_material = SubResource( 1 )

[node name="LabelNodes" type="Node" parent="."]

[node name="Bar" type="Area2D" parent="."]
position = Vector2( 1740, 540 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Label" type="Label" parent="Bar"]
margin_left = 19.0
margin_top = -108.0
margin_right = 235.0
margin_bottom = -70.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0, 1 )
text = "████████████"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar"]
shape = SubResource( 3 )

[node name="GameOver" type="Area2D" parent="."]
position = Vector2( 1930, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOver"]
shape = SubResource( 4 )

[node name="ProgressLabel" type="Label" parent="."]
margin_left = 31.8519
margin_top = 28.0077
margin_right = 71.8519
margin_bottom = 42.0077
custom_fonts/font = SubResource( 5 )
text = "Progress: 0%"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Bar" to="." method="_on_Bar_body_entered"]
[connection signal="body_entered" from="GameOver" to="." method="_on_GameOver_body_entered"]
